<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mapping Demo</string>
    <string name="action_settings">Settings</string>

    <string name="app_id"><!-- REPLACE YOUR APP_ID --></string>
    <string name="app_access_key"><!-- REPLACE YOUR ACCESS_KEY --></string>
    <string name="app_signature_key"><!-- REPLACE YOUR SIGNATURE_KEY --></string>
    <string name="app_encryption_key"><!-- REPLACE YOUR ENCRYPTION_KEY --></string>

    <string name="map_api_key"><!-- REPLACE YOUR MAP_API_KEY --></string>

    <string name="pw_sl_customer_id"><!-- REPLACE YOUR SL_CUSTOMER_ID --></string>
    <string name="pw_sl_map_id"><!-- REPLACE YOUR SL_MAP_ID --></string>

    <string name="mapping_type_menuitem">Map Type: %1$s</string>
    <string name="mapping_choose_map_type">Choose map type</string>

    <string name="mapping_building_menuitem">Building</string>
    <string name="mapping_building_choose">Choose building</string>

    <string name="mapping_provider_menuitem">Provider</string>
    <string name="mapping_provider_choose">Choose location provider</string>

    <string name="mapping_file_menuitem">Location File</string>
    <string name="mapping_file_choose">Choose file for mock location</string>

    <string name="mapping_repeat">Repeat</string>

    <string name="mapping_location_provider">SENION</string>
    <string name="mapping_no_mock_file">No mock location file exists</string>

    <string name="text_clear_cache">Cache cleared!</string>
    <string name="menu_poi_types">POI Types</string>
    <string name="text_retrieve_poi_types_failed">Retrieve POI types data failed</string>
    <string name="menu_remove_pois">Remove POIs</string>
    <string name="menu_add_pois">Add POIs</string>
    <string name="menu_bluedot_smoothing">Bluedot Smoothing</string>
    <string name="menu_route_snapping">Route Snapping: %1$s</string>
    <string name="menu_route_snapping_tolerance">Route Snapper Tolerance</string>
    <string name="mapping_flat_marker">Flat Marker</string>
    <string name="menu_stop_loading_building">Stop Loading BLD</string>
    <string name="menu_poi_zoom_level">Marker Zoom Level</string>
    <string name="menu_bluedot">Blue Dot Visible</string>

    <string-array name="mapping_types">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>None</item>
    </string-array>

    <string-array name="building_names">
        <item>Building Name 1</item>
    </string-array>

</resources>